# Recall

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: launch.json
docs/: ARCHITECTURE.md  TRANSCRIPT_EVAL.md  ab-runbook.md  reconciliation-and-merged-design.md  requirements-solution-decisions.md  transcription-pipeline-design.md
eval/: vad_coverage.py
files/: HANDOFF.md
recall/: __init__.py  asr.py  cli.py  common.py  diarize.py  enhance.py  generate.py  personas.py  transcript.py
scribe/: __init__.py  asr.py  cli.py  common.py  diarize.py  enhance.py  generate.py  identity.py  metrics.py  notes.py  personas.py  pipeline.py  transcript.py
scribe/prompts/: persona.md  report.md
scripts/: ab_test.py  seed_voiceprints.py  transcribe_audio.py
src/recall/: asr.py  cli.py  common.py  enhance.py  generate.py  identity.py  metrics.py  notes.py  personas.py  pipeline.py  store.py  transcript.py
src/recall/prompts/: notes.md
tests/: run.py  test_identity.py  test_pipeline.py  test_store.py
